# golden-protocol

./: .gitignore  ARCHITECTURE.md  README.md  README_EN.md  client.py  for_claude.txt  identities.db-shm  identities.db-wal  test_python.py  vision.txt  vision2.txt
core/: Cargo.toml
core/src/: main.rs
core/src/distance/: mod.rs
core/src/embedding/: mod.rs
core/src/field/: mod.rs
core/src/graph/: mod.rs
core/src/identity/: mod.rs
core/static/: about.html  ambient.js  landing.html  privacy.html
docs/: privacy-policy.md  store-listing.md
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
