[package]
name = "golden_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (将来のAPI連携用)
reqwest = { version = "0.12", features = ["json"] }

# Local embedding (APIキー不要)
fastembed = "4"

# Graph
petgraph = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
rss = "2"
scraper = "0.22"
governor = "0.6"
dashmap = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
